--- a/src/macro/smallbank/Makefile
+++ b/src/macro/smallbank/Makefile
@@ -1,8 +1,8 @@
 CC=g++
 CFLAGS=-std=c++11 -g -Wall -pthread -I./
-LDFLAGS= -lpthread -lrestclient-cpp
+LDFLAGS= -lpthread -lrestclient-cpp -lcurl
 SUBDIRS=api_adapters utils
-OBJECTS=api_adapters/smallbank_api.o utils/timer.o
+OBJECTS=api_adapters/SmallBank.o api_adapters/EVMDB.o utils/timer.o
 EXEC=driver
 
 all: $(SUBDIRS) $(EXEC)
