--- a/benchmark/sawtooth/sawtooth-default-pbft.yaml
+++ b/benchmark/sawtooth/sawtooth-default-pbft.yaml
@@ -126,7 +126,26 @@ services:
     command: intkey-tp-python -C tcp://validator-4:4004
     stop_signal: SIGKILL
 
+# --------------- costume rest api-------------------------
+  intkey-rest-api:
+    build:
+      context: .
+      dockerfile: rest/Dockerfile
+    image: intkey-rest-api
+    container_name: intkey-rest-api
+    volumes:
+      - ./:/project/sawtooth-sdk-python
+    ports:
+      - '8000:8000'
 
+    command: |
+      bash -c "
+      chmod +x /project/sawtooth-sdk-python/bin/rest-api
+      rest-api \
+          -b intkey-rest-api:8000 \
+          --keyfile test.priv \
+          --url rest-api-0:8008
+      "
 
 # -------------=== shell ===-----------------------
 
