add latency to response

--- a/benchmark/sawtooth-v1.2/sawtooth-default-pbft.yaml
+++ b/benchmark/sawtooth-v1.2/sawtooth-default-pbft.yaml
@@ -130,7 +130,7 @@ services:
   intkey-rest-api:
     build:
       context: .
-      dockerfile: rest/Dockerfile
+      dockerfile: rest_api/Dockerfile
     image: intkey-rest-api
     container_name: intkey-rest-api
     volumes:
