--- a/benchmark/sawtooth-v1.2/sawtooth-default-pbft.yaml
+++ b/benchmark/sawtooth-v1.2/sawtooth-default-pbft.yaml
@@ -143,7 +143,7 @@ services:
       chmod +x /project/sawtooth-sdk-python/bin/rest-api
       rest-api \
           -b intkey-rest-api:8000 \
-          --keyfile test.priv \
+          --keyfile /root/.sawtooth/keys/root.priv \
           --url rest-api-0:8008
       "
 
