--- a/benchmark/sawtooth_v1_2/docker-compose-pbft.yaml
+++ b/benchmark/sawtooth_v1_2/docker-compose-pbft.yaml
@@ -126,30 +126,7 @@ services:
     command: intkey-tp-python -C tcp://validator-4:4004
     stop_signal: SIGKILL
 
-# --------------- block server subscriber ----------------#
-  intkey-subscriber:
-    build:
-      context: .
-      dockerfile: subscriber_intkey/Dockerfile
-    image: intkey-subscriber
-    container_name: intkey-subscriber
-    volumes:
-      - ./:/project/sawtooth_sdk_python
-    ports:
-      - '9033:9033'
-    depends_on:
-      - validator-0
-    command: |
-      sh -c "
-      chmod +x /project/sawtooth_sdk_python/bin/subscribe
-      subscribe \
-          -C tcp://validator-0:4004 \
-          -b intkey-subscriber:9033 \
-          --url rest-api-0:8008 \
-          -vv
-      "
-
-# --------------- costume rest api-------------------------
+# --------------- block server subscriber & transaction server ----------------#
   intkey-rest-api:
     build:
       context: .
@@ -170,7 +147,70 @@ services:
           --url rest-api-0:8008
       "
 
-# -------------=== shell ===-----------------------
+  block-server-subscriber:
+    build:
+      context: .
+      dockerfile: block_server_subscriber/Dockerfile
+    image: block-server-subscriber
+    container_name: block-server-subscriber
+    volumes:
+      - ./:/project/sawtooth_sdk_python
+    ports:
+      - '9002:9002'
+    depends_on:
+      - validator-0
+    command: |
+      sh -c "
+      chmod +x /project/sawtooth_sdk_python/bin/block-server-subscriber
+      block-server-subscriber \
+          -C tcp://validator-0:4004 \
+          --url rest-api-0:8008 \
+          --uri  mongodb://root:password@bb:27017/ \
+          -vv
+      "
+
+  block-server-rest-api:
+    build:
+      context: .
+      dockerfile: block_server_api/Dockerfile
+    image: block-server-rest-api
+    container_name: block-server-rest-api
+    volumes:
+       - ./:/project/sawtooth_sdk_python
+    ports:
+      - '9001:9001'
+    command: |
+      sh -c "
+      chmod +x /project/sawtooth_sdk_python/bin/block-server-api
+      block-server-api \
+           -b block-server-rest-api:9001 \
+           --uri  mongodb://root:password@bb:27017/ \
+           -vv
+      "
+# -------------database for off chain data --------
+  bb:
+    image: mongo:3-xenial
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+    restart: always
+    ports:
+      - 27017:27017
+
+  bbmanager:
+    image: mongo-express
+    links:
+      - bb
+    ports:
+      - 8081:8081
+    restart: always
+    environment:
+      ME_CONFIG_MONGODB_SERVER: bb
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+
+
+  # -------------=== shell ===-----------------------
 
   shell:
     image: hyperledger/sawtooth-shell:nightly
