--- a/benchmark/sawtooth_v1_2/docker-compose-pbft.yaml
+++ b/benchmark/sawtooth_v1_2/docker-compose-pbft.yaml
@@ -263,6 +263,7 @@ services:
             sawtooth.consensus.algorithm.version=1.0 \
             sawtooth.consensus.pbft.members=\\['\"'$$(cat /pbft-shared/validators/validator-0.pub)'\"','\"'$$(cat /pbft-shared/validators/validator-1.pub)'\"','\"'$$(cat /pbft-shared/validators/validator-2.pub)'\"','\"'$$(cat /pbft-shared/validators/validator-3.pub)'\"','\"'$$(cat /pbft-shared/validators/validator-4.pub)'\"'\\] \
             sawtooth.publisher.max_batches_per_block=100 \
+            sawtooth.validator.max_transactions_per_block = 100 \
             -o config.batch
         fi &&
         if [ ! -e /var/lib/sawtooth/genesis.batch ]; then
