fix max transaction per block

--- a/benchmark/sawtooth_v1_2/docker-compose-poet.yaml
+++ b/benchmark/sawtooth_v1_2/docker-compose-poet.yaml
@@ -61,7 +61,7 @@ services:
              sawtooth.poet.target_wait_time=5 \
              sawtooth.poet.initial_wait_time=25 \
              sawtooth.publisher.max_batches_per_block=100 \
-             sawtooth.validator.max_transactions_per_block = 100 \
+             sawtooth.validator.max_transactions_per_block=100 \
           -o poet-settings.batch && \
         sawadm genesis \
           config-genesis.batch config.batch poet.batch poet-settings.batch && \
