--- a/benchmark/ethereum-docker/sealer/Dockerfile
+++ b/benchmark/ethereum-docker/sealer/Dockerfile
@@ -13,5 +13,5 @@ RUN geth --datadir ~/sealer account import --password /tmp/`ls -al /tmp/ | awk '
 ENV addr=""
 ENV id=""
 ENV ip=""
-CMD exec geth --bootnodes "enode://$id@$ip:30301" --datadir ~/sealer --networkid 6085214 --verbosity=4  --syncmode=full --mine --miner.etherbase $addr --unlock $addr --password /tmp/`ls -al /tmp/ | awk '{print $9}' | grep .pwd`
+CMD exec geth --bootnodes "enode://$id@$ip:30301" --datadir ~/sealer --networkid 6085214 --verbosity=4  --syncmode=full --mine -miner.threads=1 --miner.etherbase $addr --unlock $addr --password /tmp/`ls -al /tmp/ | awk '{print $9}' | grep .pwd`
 EXPOSE 30303
