--- a/benchmark/ethereum-docker-pow/docker-compose.yml
+++ b/benchmark/ethereum-docker-pow/docker-compose.yml
@@ -14,30 +14,11 @@ services:
       eth_private_network:
         ipv4_address: 172.28.1.10
 
-#  eth_sealer1:
-#    restart: on-failure:5
-#    hostname: sealer1
-#    depends_on:
-#      - eth_bootnode
-#    environment:
-#      - addr=0xe062C6acEF6e44a009dfF67bCBdDf2C780DdbC91
-#      - id=4cb7dc25aaeb769ae94ce002e2ecd5232d9421a81c3cc63620a79db127778dd89c61348e7475a1e977cb72121098d364451bcbbaffd2981e306408d4b2405a6e
-#      - ip=172.28.1.10
-#    build:
-#      context: ./sealer
-#      args:
-#        pk: 7641fd2a79042e9bb78d5a5960d6c32afcbeda6e5c4076262db3263bd7d5de27 # BIP39 Mnemonic: toy paper favorite position stumble broccoli enhance purse nerve fat hobby size improve pumpkin truck
-#        pwd: MfeLN6JxcZ6P25eC # MUSIC fruit egg LAPTOP NUT 6 JACK xbox coffee ZIP 6 PARK 2 5 egg COFFEE
-#    container_name: sealer1
-#    volumes:
-#      - eth_data_sealer1:/root/.ethash
-#    networks:
-#      eth_private_network:
-#        ipv4_address: 172.28.1.11
 
-  eth_sealer2:
+
+  eth_miner1:
     restart: on-failure:5
-    hostname: sealer2
+    hostname: miner1
     depends_on:
       - eth_bootnode
     environment:
@@ -45,107 +26,21 @@ services:
       - id=4cb7dc25aaeb769ae94ce002e2ecd5232d9421a81c3cc63620a79db127778dd89c61348e7475a1e977cb72121098d364451bcbbaffd2981e306408d4b2405a6e
       - ip=172.28.1.10
     build:
-      context: ./sealer
+      context: ./miner
       args:
         pk: 91fa188e5e01a3ba4df713c97e1b712a878451db3952fc104f7eb90e9f860e0c # BIP39 Mnemonic: panel average amount abandon fence renew spoon powder top grid whip achieve access sponsor meadow
         pwd: 9Uk5kskVGZdTsu87 # 9 USA korean 5 korean skype korean VISA GOLF ZIP drip TOKYO skype usa 8 7
-    container_name: sealer2
+    container_name: miner1
+    ports:
+      # http port
+      - 8545:59767
     volumes:
-     - eth_data_sealer2:/root/.ethash
+     - eth_data_miner1:/root/.ethash
     networks:
       eth_private_network:
         ipv4_address: 172.28.1.12
 
-#  eth_backup1:
-#    restart: on-failure:5
-#    hostname: backup1
-#    depends_on:
-#      - eth_bootnode
-#    environment:
-#      - addr=0x30b80213f04b1e4f40E7c1241Ab1901Fe59EFB43
-#      - id=4cb7dc25aaeb769ae94ce002e2ecd5232d9421a81c3cc63620a79db127778dd89c61348e7475a1e977cb72121098d364451bcbbaffd2981e306408d4b2405a6e
-#      - ip=172.28.1.10
-#    build:
-#      context: ./backup
-#      args:
-#        pk: ee2b78ae34820b9f643f3c07f1ac698aa0fd5c659569414b879318d741728343 # BIP39 Mnemonic: notice pulse subway weather between force risk robust lesson inspire easy issue outside palace someone
-#        pwd: PuBEtkJ8sHbYfLbU # PARK usa BESTBUY EGG tokyo korean JACK 8 skype HULU bestbuy YELP fruit LAPTOP bestbuy USA
-#    container_name: backup1
-#    volumes:
-#      - eth_data_backup1:/root/.ethash
-#    networks:
-#      eth_private_network:
-#        ipv4_address: 172.28.1.13
 
-  eth_backup2:
-    restart: on-failure:5
-    hostname: backup2
-    depends_on:
-      - eth_bootnode
-    environment:
-      - addr=0xc031114f2625EF0733d57e406aeD346d5Ab3f827
-      - id=4cb7dc25aaeb769ae94ce002e2ecd5232d9421a81c3cc63620a79db127778dd89c61348e7475a1e977cb72121098d364451bcbbaffd2981e306408d4b2405a6e
-      - ip=172.28.1.10
-    build:
-      context: ./backup
-      args:
-        pk: c57ab27575691073684c34016949a950f4a44233425bd3fc442ef720bff4f9ad # BIP39 Mnemonic: section neck kit web era work blind defy census output tube bullet game involve rural
-        pwd: A2LJGdRUvAKhq682 # APPLE 2 LAPTOP JACK GOLF drip ROPE USA visa APPLE KOREAN hulu queen 6 8 2
-    container_name: backup2
-    volumes:
-      - eth_data_backup2:/root/.ethash
-    networks:
-      eth_private_network:
-        ipv4_address: 172.28.1.14
-
-#  eth_peer:
-#    restart: on-failure:5
-#    hostname: peer
-#    depends_on:
-#      - eth_bootnode
-#    environment:
-#      - addr=0x116C95B6f0599b80EdaEF96dB4A0a03890bAf812
-#      - id=4cb7dc25aaeb769ae94ce002e2ecd5232d9421a81c3cc63620a79db127778dd89c61348e7475a1e977cb72121098d364451bcbbaffd2981e306408d4b2405a6e
-#      - ip=172.28.1.10
-#    build:
-#      context: ./peer
-#      args:
-#        pk: 1646b6552c0bcea3fda9001bf5748a53a0499c724f4f60ec1038ad76d9c5d861 # BIP39 Mnemonic: limb pair transfer answer flower rescue inquiry quit debate echo liquid owner priority require again
-#        pwd: 6Z39urGJgqxjJWjQ # 6 ZIP 3 9 usa rope GOLF JACK golf queen xbox jack JACK WALMART jack QUEEN
-#    container_name:  peer
-#    ports:
-#      - 46281:50282
-#    volumes:
-#      - eth_data_peer:/root/.ethash
-#    networks:
-#      eth_private_network:
-#        ipv4_address: 172.28.1.15
-
-  eth_application:
-    restart: on-failure:5
-    hostname: application
-    depends_on:
-      - eth_bootnode
-    environment:
-      - addr=0x52b08b642e3b3b07d995039bb7737e15317902df
-      - id=4cb7dc25aaeb769ae94ce002e2ecd5232d9421a81c3cc63620a79db127778dd89c61348e7475a1e977cb72121098d364451bcbbaffd2981e306408d4b2405a6e
-      - ip=172.28.1.10
-    build:
-      context: ./application
-      args:
-        pk: 811e1c1ebed7e8356f80c59ed3adf80ae5fa9c94a96c17b1bb1607c6e1a33ad0
-        pwd: KpN4wr4cAvtefVJZ # KOREAN park NUT 4 walmart rope 4 coffee APPLE visa tokyo egg fruit VISA JACK ZIP
-    container_name:  application
-    ports:
-      # http port
-      - 46282:59767
-      # ws port
-      - 46283:63343
-    volumes:
-      - eth_data_application:/root/.ethash
-    networks:
-      eth_private_network:
-        ipv4_address: 172.28.1.16
 
 networks:
   eth_private_network:
@@ -155,9 +50,4 @@ networks:
       - subnet: 172.28.1.0/24
 
 volumes:
-  #eth_data_sealer1:
-  eth_data_sealer2:
-  #eth_data_backup1:
-  eth_data_backup2:
-  #eth_data_peer:
-  eth_data_application:
+  eth_data_miner1:
